Ajout de la route de vue de question/réponse et fixage des padding et de l'alignement de texte

--- a/web/style.css
+++ b/web/style.css
@@ -576,3 +576,32 @@ button.btn-info {
 textarea {
     resize: none;
 }
+
+/*//// REPONSES ////*/
+
+.paddingtop{
+    padding-top: 150px;
+    padding-bottom: 100px;
+    text-align: center;
+}
+.chat
+{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+.chat li
+{
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #B3A9A9;
+}
+.left {
+    text-align: left;
+}
+.right {
+    text-align: right;
+}
+.media-photo {
+    margin: 10px;
+}
